[tool.poetry]
name = "procon"
version = "0.1.0"
description = ""
authors = ["0t3k25 <40241920+0t3k25@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
add = "black"
mypy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
